finished all HTML

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <img alt="confirm password icon" src="./confirm-password.png">
             <input type="password" name="confirm-password" placeholder="Confirm Password">
         </div>
+        <p>By signing up, you are agreeing to our <a href="#">Terms & Conditions</a> and <a href="#">Privacy Policy</a></p>
+        <button type="submit">Continue</button>
+        <p>Already have an account? <a href="#">Login</a></p>
     </form>
 </body>
 </html>
