--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up Form</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>Sign Up For My Product</h1>
     <form action="./index.html" method="post">
-      <ul>
-        <li><input type="text" name="name" placeholder="Full Name" /></li>
-        <li><input type="email" name="email" placeholder="Email" /></li>
-        <li>
-          <input type="password" name="password" placeholder="Password" />
-        </li>
-        <li>
-          <input
-            type="password"
-            name="confirm-password"
-            placeholder="Confirm Password"
-          />
-        </li>
-      </ul>
+      <h1>Sign Up For My Product</h1>
+      <div>
+        <img src="./images/user.png" alt="user icon" />
+        <input type="text" name="name" placeholder="Full Name" />
+        <br>
+        <input type="email" name="email" placeholder="Email" />
+        <input type="password" name="password" placeholder="Password" />
+        <input
+          type="password"
+          name="confirm-password"
+          placeholder="Confirm Password"
+        />
+      </div>
       <p>
         By signing up, you are agreeing to our
         <a href="#">Terms & Conditions</a> and <a href="#">Privacy Policy</a>
