--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
         <img src="./images/user.png" alt="user icon" />
         <input type="text" name="name" placeholder="Full Name" />
         <br>
+        <img src="/images/envelope.png" alt="mail icon">
         <input type="email" name="email" placeholder="Email" />
+        <br>
+        <img src="images/lock.png" alt="password icon">
         <input type="password" name="password" placeholder="Password" />
+        <br>
+        <img src="images/lock.png" alt="password icon">
         <input
           type="password"
           name="confirm-password"
