--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <form action="./index.html" method="post">
+    <form action="./success.html" method="post">
       <h1>Sign Up For My Product</h1>
       <div>
         <img src="./images/user.png" alt="user icon" />
