--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@
       <h1>Sign Up For My Product</h1>
       <div>
         <img src="./images/user.png" alt="user icon" />
-        <input type="text" name="name" placeholder="Full Name" />
-        <br>
-        <img src="/images/envelope.png" alt="mail icon">
-        <input type="email" name="email" placeholder="Email" />
-        <br>
-        <img src="images/lock.png" alt="password icon">
-        <input type="password" name="password" placeholder="Password" />
-        <br>
-        <img src="images/lock.png" alt="password icon">
+        <input required type="text" name="name" placeholder="Full Name" pattern="[A-Za-z\s]+" />
+        <br />
+        <img src="/images/envelope.png" alt="mail icon" />
+        <input required type="email" name="email" placeholder="Email" />
+        <br />
+        <img src="images/lock.png" alt="password icon" />
         <input
+          required
+          min-length="8"
+          type="password"
+          name="password"
+          placeholder="Password"
+        />
+        <br />
+        <img src="images/lock.png" alt="password icon" />
+        <input
+          min-length="8"
+          required
           type="password"
           name="confirm-password"
           placeholder="Confirm Password"
