--- a/success.html
+++ b/success.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Success!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<body>
+    <h2>Sign Up Successful!</h2>
+</body>
 </body>
 </html>
