fixed mail icon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="./images/user.png" alt="user icon" />
             <input id="name" required type="text" name="name" placeholder="Full Name" pattern="[A-Za-z\s]+" />
             <br />
-            <img src="/images/envelope.png" alt="mail icon" />
+            <img src="images/envelope.png" alt="mail icon" />
             <input id="email" required type="email" name="email" placeholder="Email" />
             <br />
             <img src="images/lock.png" alt="password icon" />
